# microsim

./: best_params.txt  pyproject.toml
.dvc/: config
calib/: Aachen_detectors.add.xml  Start_od_9_10.txt  t_test_counts100.csv  true_data_9_10.csv
calibration/: pyproject.toml  sim_reps.py
calibration/configs/: config.json  simulation_setups.json  spsa_setups.json
calibration/src/calibration/: __init__.py  gof.py  parsing.py  replications.py  sim_reps.py  simulations.py  spsa.py  utils.py
calibration/src/calibration/scripts/: param_calibration.py  rmsn_eval.py  run_spsa.py  sim_reps.py
data/: Aachen_detectors.add.xml  Aachen_taz.add.xml  Start_od_7_8.txt  Start_od_8_9.txt  required_replications.csv  true_data_7_8.csv  true_data_8_9.csv
dyn/: bus_route.rou.xml  bus_stops.add.xml  dyn_config.sumocfg  flows.rou.xml  trips.rou  view_settings.xml
dyn/TL/: TL_27290835.xml  TL_60713745.xml
dynamic/: pyproject.toml
dynamic/configs/: bus_route.rou.xml  dyn_config.sumocfg  dyn_config_prio.sumocfg  dyn_routes.rou.xml  edgedata.add.xml
dynamic/configs/TL/: TL_60713745.xml
dynamic/src/dynamic/: __init__.py  base_run.py  bus.py  bus_manager.py  manager.py  tl_controller.py
dynamic/src/dynamic/scripts/: bus_status_quo.py  bus_with_prio.py  bus_without_prio.py
platform/: config.json  counts_SPSA.pckl  main.py  simulation_setups.json  spsa_setups.json
platform/cache/: 0routes.vehroutes.xml  0upd_od_trips.trips.xml  1routes.vehroutes.xml
platform/src/: RUN_SUMO.py  SPSA.py  miscs.py
