[project]
name = "dynamic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "scal-o", email = "alex.scalese@virgilio.it" }
]
requires-python = ">=3.13"
dependencies = [
    "eclipse-sumo>=1.25.0",
    "libsumo>=1.25.0",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "traci>=1.25.0",
]

[project.scripts]
dynamic = "dynamic:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
